--- a/index.html
+++ b/index.html
@@ -3,92 +3,170 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>V8 ELITE EDITION | CÁSSIA PROMPT</title>
+    <title>V9 POWER ELITE | CÁSSIA PROMPT</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <style>
-        :root { --bg: #050505; --card: #0a0a0a; --text: #ffffff; --border: #1a1a1a; --gold: linear-gradient(135deg, #bf953f 0%, #fcf6ba 45%, #b38728 70%, #fbf5b7 100%); --glow: 0 0 30px rgba(191, 149, 63, 0.1); }
-        body { margin: 0; background: var(--bg); color: var(--text); font-family: 'Inter', sans-serif; overflow-x: hidden; }
-        nav { background: rgba(0,0,0,0.9); padding: 20px 40px; border-bottom: 1px solid #bf953f; display: flex; justify-content: space-between; align-items: center; }
-        .logo-v8 { font-size: 24px; font-weight: 900; letter-spacing: 6px; background: var(--gold); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-transform: uppercase; }
-        main { padding: 40px 20px; display: flex; flex-direction: column; align-items: center; min-height: 70vh; }
-        .glass-panel { background: var(--card); width: 100%; max-width: 850px; border-radius: 30px; border: 1px solid var(--border); padding: 45px; box-shadow: var(--glow); }
-        label { font-size: 11px; font-weight: 800; color: #bf953f; text-transform: uppercase; display: block; margin-bottom: 12px; letter-spacing: 2px; }
-        textarea, input { width: 100%; background: rgba(255,255,255,0.02); border: 1px solid var(--border); padding: 20px; border-radius: 15px; color: var(--text); font-size: 16px; margin-bottom: 25px; box-sizing: border-box; }
-        .btn-prime { width: 100%; background: var(--gold); color: #000; border: none; padding: 28px; border-radius: 18px; font-weight: 900; cursor: pointer; text-transform: uppercase; letter-spacing: 5px; }
-        #output-zone { display: none; margin-top: 50px; width: 100%; max-width: 850px; }
-        #prompt-result { width: 100%; height: 300px; background: #000; color: #fcf6ba; border: 1px solid #bf953f; padding: 20px; border-radius: 15px; font-family: monospace; }
-        footer { margin-top: 80px; padding: 40px; text-align: center; border-top: 1px solid var(--border); }
-        .footer-text { font-size: 10px; color: var(--text); opacity: 0.5; text-transform: uppercase; letter-spacing: 2px; }
+        :root {
+            --bg: #050505; --card: #0a0a0a; --text: #ffffff; --border: #1a1a1a;
+            --gold: linear-gradient(135deg, #bf953f 0%, #fcf6ba 45%, #b38728 70%, #fbf5b7 100%);
+            --glow: 0 0 30px rgba(191, 149, 63, 0.1);
+        }
+        body.light-mode { --bg: #f9f9f9; --card: #ffffff; --text: #1a1a1a; --border: #e2e2e2; }
+        body { margin: 0; background: var(--bg); color: var(--text); font-family: 'Segoe UI', system-ui, sans-serif; transition: 0.3s; overflow-x: hidden; }
+        nav { padding: 20px 60px; border-bottom: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; background: var(--bg); position: sticky; top: 0; z-index: 100; }
+        .logo-v9 { font-size: 18px; font-weight: 900; letter-spacing: 6px; background: var(--gold); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-transform: uppercase; }
+        .top-btns { display: flex; gap: 10px; }
+        .btn-minimal { background: transparent; border: 1px solid var(--border); color: var(--text); padding: 8px 16px; border-radius: 4px; cursor: pointer; font-size: 10px; text-transform: uppercase; letter-spacing: 1px; transition: 0.2s; }
+        .btn-minimal:hover { border-color: #bf953f; color: #bf953f; }
+        main { padding: 40px 20px; display: flex; flex-direction: column; align-items: center; }
+        .glass-panel { background: var(--card); width: 100%; max-width: 900px; border-radius: 12px; border: 1px solid var(--border); padding: 50px; box-shadow: var(--glow); }
+        .integrity-header { display: flex; justify-content: space-between; font-size: 9px; font-weight: 800; color: #bf953f; text-transform: uppercase; margin-bottom: 10px; letter-spacing: 2px; }
+        .bar-bg { width: 100%; height: 2px; background: rgba(191,149,63,0.1); border-radius: 4px; overflow: hidden; margin-bottom: 40px; }
+        .bar-fill { width: 0%; height: 100%; background: var(--gold); transition: 0.8s; }
+        .pdf-action { color: #bf953f; font-size: 11px; font-weight: 700; cursor: pointer; display: inline-flex; align-items: center; gap: 5px; margin-bottom: 25px; text-transform: uppercase; letter-spacing: 1px; }
+        .field-group { margin-bottom: 25px; }
+        label { font-size: 10px; font-weight: 600; opacity: 0.5; text-transform: uppercase; display: block; margin-bottom: 8px; letter-spacing: 1.5px; }
+        input, textarea { width: 100%; background: transparent; border: 1px solid var(--border); padding: 14px; border-radius: 4px; color: var(--text); font-size: 14px; box-sizing: border-box; outline: none; transition: 0.2s; font-weight: 300; }
+        input:focus, textarea:focus { border-color: #bf953f; background: rgba(191,149,63,0.01); }
+        .btn-supreme { width: 100%; background: var(--gold); color: #000; border: none; padding: 20px; border-radius: 4px; font-weight: 900; cursor: pointer; text-transform: uppercase; letter-spacing: 4px; font-size: 13px; transition: 0.3s; margin-top: 20px; }
+        #output-zone { display: none; width: 100%; max-width: 900px; margin-top: 40px; }
+        #prompt-result { width: 100%; height: 400px; background: #000; border: 1px solid #bf953f; color: #fcf6ba; padding: 30px; border-radius: 8px; font-family: 'Consolas', monospace; font-size: 14px; line-height: 1.6; }
+        .export-btns { display: flex; gap: 15px; margin-top: 15px; }
+        footer { margin-top: 80px; padding: 40px; text-align: center; border-top: 1px solid var(--border); font-size: 9px; opacity: 0.5; letter-spacing: 2px; line-height: 2.2; }
     </style>
 </head>
-<body>
+<body id="main-body">
 
-<nav><div class="logo-v8">V8 ELITE</div></nav>
-
-<main id="app-block">
-    <div class="glass-panel" id="conteudo-valido">
-        <label>OBJETIVO (DESTINO)</label>
-        <input type="text" id="destino" placeholder="O que a IA deve entregar?">
-        <label>DADOS (FATOS)</label>
-        <textarea id="fatos" rows="5" placeholder="Cole as informações aqui..."></textarea>
-        <button class="btn-prime" onclick="gerar()">Gerar Supremo Prompt</button>
+<nav>
+    <div class="logo-v9">V9 POWER ELITE</div>
+    <div class="top-btns">
+        <button class="btn-minimal" onclick="limpar()">Apagar Tudo</button>
+        <button class="btn-minimal" onclick="toggleMode()">Modo Claro/Escuro</button>
     </div>
+</nav>
+
+<main>
+    <div class="glass-panel">
+        <div class="integrity-header"><span>Sincronização de Dados V9</span><span id="pct">0%</span></div>
+        <div class="bar-bg"><div id="fill" class="bar-fill"></div></div>
+
+        <div class="pdf-action" onclick="document.getElementById('pdf-up').click()">📎 Importar Dados de PDF</div>
+        <input type="file" id="pdf-up" accept="application/pdf" style="display:none" onchange="lerPDF(this)">
+
+        <div class="field-group">
+            <label>1. O que deve ser gerado?</label>
+            <input type="text" id="gerado" oninput="atualizar()" placeholder="Ex: Petição, Relatório, Contrato...">
+        </div>
+
+        <div class="field-group">
+            <label>2. Objetivo (Destino do Comando)</label>
+            <input type="text" id="destino" oninput="atualizar()" placeholder="Qual o resultado final esperado?">
+        </div>
+
+        <div class="field-group">
+            <label>3. Registro dos Fatos (Base de Dados)</label>
+            <textarea id="fatos" rows="10" oninput="atualizar()" placeholder="Insira o texto bruto ou use o PDF..."></textarea>
+        </div>
+
+        <button class="btn-supreme" onclick="gerar()">Executar Engenharia V9 Power</button>
+    </div>
+
     <div id="output-zone">
+        <label>Comando Supremo V9 [RIGOR ABSOLUTO] Gerado:</label>
         <textarea id="prompt-result" readonly></textarea>
+        <div class="export-btns">
+            <button class="btn-supreme" style="flex: 1; background:transparent; border:1px solid #bf953f; color:#bf953f;" onclick="copiar()">Copiar Prompt</button>
+            <button class="btn-supreme" style="flex: 1; background: #bf953f; color: #000;" onclick="exportarWord()">Baixar em Word (.doc)</button>
+        </div>
     </div>
 </main>
 
 <footer>
-    <div class="footer-text">
-        <strong>CÁSSIA PROMPT ® | V8 ELITE EDITION</strong><br>
-        LICENCIADO PARA: <span id="user-display" style="color:#fcf6ba; font-weight:bold;">VERIFICANDO...</span><br>
-        A RESPONSABILIDADE É DE QUEM ESTÁ USANDO.
-    </div>
+    CÁSSIA PROMPT ® | TECNOLOGIA V9 POWER ELITE EDITION<br>
+    SISTEMA DE ENGENHARIA DE PROMPT DE ALTA PRECISÃO - PÚBLICO GERAL<br>
+    A RESPONSABILIDADE É DE QUEM ESTÁ USANDO. O PROGRAMA APENAS GERA O PROMPT.
 </footer>
 
 <script>
-    // ==========================================
-    // TRAVA DE SEGURANÇA MESTRE (CÁSSIA V8)
-    // ==========================================
-
-    // LISTA BRANCA: Só quem estiver aqui acessa.
-    // Se o termo da URL não estiver aqui, o site bloqueia na hora!
-    const ACESSOS = {
-        "RELAT-RIO-DA-FRAN-": "FRANCIANE",
-        "painel-triagem-juridica": "CÁSSIA",
-        "helen-cristina": "HELEN CRISTINA"
-    };
-
-    const url = window.location.href.toLowerCase();
-    let acessoConcedido = false;
-    let nomeEncontrado = "";
-
-    // O detetive varre a lista:
-    for (let chave in ACESSOS) {
-        if (url.includes(chave.toLowerCase())) {
-            acessoConcedido = true;
-            nomeEncontrado = ACESSOS[chave];
-            break;
-        }
+    function toggleMode() { document.getElementById('main-body').classList.toggle('light-mode'); }
+    
+    function limpar() {
+        document.getElementById('gerado').value = "";
+        document.getElementById('destino').value = "";
+        document.getElementById('fatos').value = "";
+        document.getElementById('output-zone').style.display = 'none';
+        atualizar();
     }
 
-    // Se o detetive não achar o nome na URL, ele DESTRÓI o site:
-    if (!acessoConcedido) {
-        document.getElementById('app-block').innerHTML = `
-            <div style="padding:100px; text-align:center;">
-                <h1 style="color:#bf953f; font-size:45px;">ACESSO REVOGADO</h1>
-                <p style="color:white; letter-spacing:3px;">ESTA LICENÇA FOI CANCELADA PELA ADMINISTRADORA.</p>
-            </div>`;
-        document.getElementById('user-display').innerText = "BLOQUEADO";
-    } else {
-        document.getElementById('user-display').innerText = nomeEncontrado;
+    async function lerPDF(input) {
+        const file = input.files[0];
+        if(!file) return;
+        const reader = new FileReader();
+        reader.onload = async function() {
+            const typedarray = new Uint8Array(this.result);
+            const pdf = await pdfjsLib.getDocument(typedarray).promise;
+            let fullText = "";
+            for(let i=1; i<=pdf.numPages; i++) {
+                const page = await pdf.getPage(i);
+                const content = await page.getTextContent();
+                fullText += content.items.map(s => s.str).join(" ") + "\n";
+            }
+            document.getElementById('fatos').value = fullText;
+            atualizar();
+        };
+        reader.readAsArrayBuffer(file);
+    }
+
+    function atualizar() {
+        let p = Math.min(100, (document.getElementById('gerado').value.length * 2) + (document.getElementById('destino').value.length * 2) + (document.getElementById('fatos').value.length / 50));
+        document.getElementById('fill').style.width = p + "%";
+        document.getElementById('pct').innerText = Math.round(p) + "%";
     }
 
     function gerar() {
-        if (!acessoConcedido) return;
+        const g = document.getElementById('gerado').value;
         const d = document.getElementById('destino').value;
         const f = document.getElementById('fatos').value;
-        document.getElementById('prompt-result').value = "### MODO V8 ###\n\nOBJETIVO: " + d + "\n\nFATOS: " + f;
+        
+        const promptMaster = `### [ORDEM SUPREMA - SISTEMA V9 POWER ELITE] ###
+
+VOCÊ É UM EXPERT EM ENGENHARIA TÉCNICA E ANÁLISE DE DADOS.
+ESTE PROTOCOLO É DE ERRO ZERO. ALUCINAÇÕES SÃO TERMINANTEMENTE PROIBIDAS.
+
+1. O QUE DEVE SER GERADO: ${g}
+2. OBJETIVO DO COMANDO: ${d}
+
+[DIRETRIZES DE RIGOR]:
+- FUNDAMENTAÇÃO: Sempre que houver base legal ou técnica, cite com certeza absoluta.
+- JURISPRUDÊNCIA: Se houver entendimento pacificado em tribunais superiores, mencione.
+- TRAVA DE SEGURANÇA: Se não houver certeza absoluta ou a informação não existir, escreva: "Fundamentação pendente de análise humana". PROIBIDO INVENTAR.
+- PROIBIDO baboseiras, introduções amigáveis ou erros gramaticais. Entregue o resultado técnico puro.
+
+[REGISTRO DOS FATOS (BASE BRUTA)]:
+${f}
+
+[EXECUÇÃO]:
+Entregue o resultado agora, formatado e pronto para uso profissional.`;
+
+        document.getElementById('prompt-result').value = promptMaster;
         document.getElementById('output-zone').style.display = 'block';
+        window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'});
+    }
+
+    function exportarWord() {
+        const content = document.getElementById('prompt-result').value;
+        const blob = new Blob(['\ufeff', content], { type: 'application/msword' });
+        const url = URL.createObjectURL(blob);
+        const link = document.createElement('a');
+        link.href = url;
+        link.download = 'Comando_V9_Publico.doc';
+        link.click();
+    }
+
+    function copiar() {
+        document.getElementById('prompt-result').select();
+        document.execCommand('copy');
+        alert("💎 Prompt V9 Copiado!");
     }
 </script>
 </body>
