--- a/index.html
+++ b/index.html
@@ -65,109 +65,4 @@
 
         <div class="field-group">
             <label>3. Registro dos Fatos (Base de Dados)</label>
-            <textarea id="fatos" rows="10" oninput="atualizar()" placeholder="Insira o texto bruto ou use o PDF..."></textarea>
-        </div>
-
-        <button class="btn-supreme" onclick="gerar()">Executar Engenharia V9 Power</button>
-    </div>
-
-    <div id="output-zone">
-        <label>Comando Supremo V9 [RIGOR ABSOLUTO] Gerado:</label>
-        <textarea id="prompt-result" readonly></textarea>
-        <div class="export-btns">
-            <button class="btn-supreme" style="flex: 1; background:transparent; border:1px solid #bf953f; color:#bf953f;" onclick="copiar()">Copiar Prompt</button>
-            <button class="btn-supreme" style="flex: 1; background: #bf953f; color: #000;" onclick="exportarWord()">Baixar em Word (.doc)</button>
-        </div>
-    </div>
-</main>
-
-<footer>
-    CÁSSIA PROMPT ® | TECNOLOGIA V9 POWER ELITE EDITION<br>
-    SISTEMA DE ENGENHARIA DE PROMPT DE ALTA PRECISÃO - PÚBLICO GERAL<br>
-    A RESPONSABILIDADE É DE QUEM ESTÁ USANDO. O PROGRAMA APENAS GERA O PROMPT.
-</footer>
-
-<script>
-    function toggleMode() { document.getElementById('main-body').classList.toggle('light-mode'); }
-    
-    function limpar() {
-        document.getElementById('gerado').value = "";
-        document.getElementById('destino').value = "";
-        document.getElementById('fatos').value = "";
-        document.getElementById('output-zone').style.display = 'none';
-        atualizar();
-    }
-
-    async function lerPDF(input) {
-        const file = input.files[0];
-        if(!file) return;
-        const reader = new FileReader();
-        reader.onload = async function() {
-            const typedarray = new Uint8Array(this.result);
-            const pdf = await pdfjsLib.getDocument(typedarray).promise;
-            let fullText = "";
-            for(let i=1; i<=pdf.numPages; i++) {
-                const page = await pdf.getPage(i);
-                const content = await page.getTextContent();
-                fullText += content.items.map(s => s.str).join(" ") + "\n";
-            }
-            document.getElementById('fatos').value = fullText;
-            atualizar();
-        };
-        reader.readAsArrayBuffer(file);
-    }
-
-    function atualizar() {
-        let p = Math.min(100, (document.getElementById('gerado').value.length * 2) + (document.getElementById('destino').value.length * 2) + (document.getElementById('fatos').value.length / 50));
-        document.getElementById('fill').style.width = p + "%";
-        document.getElementById('pct').innerText = Math.round(p) + "%";
-    }
-
-    function gerar() {
-        const g = document.getElementById('gerado').value;
-        const d = document.getElementById('destino').value;
-        const f = document.getElementById('fatos').value;
-        
-        const promptMaster = `### [ORDEM SUPREMA - SISTEMA V9 POWER ELITE] ###
-
-VOCÊ É UM EXPERT EM ENGENHARIA TÉCNICA E ANÁLISE DE DADOS.
-ESTE PROTOCOLO É DE ERRO ZERO. ALUCINAÇÕES SÃO TERMINANTEMENTE PROIBIDAS.
-
-1. O QUE DEVE SER GERADO: ${g}
-2. OBJETIVO DO COMANDO: ${d}
-
-[DIRETRIZES DE RIGOR]:
-- FUNDAMENTAÇÃO: Sempre que houver base legal ou técnica, cite com certeza absoluta.
-- JURISPRUDÊNCIA: Se houver entendimento pacificado em tribunais superiores, mencione.
-- TRAVA DE SEGURANÇA: Se não houver certeza absoluta ou a informação não existir, escreva: "Fundamentação pendente de análise humana". PROIBIDO INVENTAR.
-- PROIBIDO baboseiras, introduções amigáveis ou erros gramaticais. Entregue o resultado técnico puro.
-
-[REGISTRO DOS FATOS (BASE BRUTA)]:
-${f}
-
-[EXECUÇÃO]:
-Entregue o resultado agora, formatado e pronto para uso profissional.`;
-
-        document.getElementById('prompt-result').value = promptMaster;
-        document.getElementById('output-zone').style.display = 'block';
-        window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'});
-    }
-
-    function exportarWord() {
-        const content = document.getElementById('prompt-result').value;
-        const blob = new Blob(['\ufeff', content], { type: 'application/msword' });
-        const url = URL.createObjectURL(blob);
-        const link = document.createElement('a');
-        link.href = url;
-        link.download = 'Comando_V9_Publico.doc';
-        link.click();
-    }
-
-    function copiar() {
-        document.getElementById('prompt-result').select();
-        document.execCommand('copy');
-        alert("💎 Prompt V9 Copiado!");
-    }
-</script>
-</body>
-</html>
+            <textarea id="fatos" rows="10" on
